--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,6 +2,18 @@
   padding: 0 2rem;
 }
 
+@font-face {
+  font-family: 'Airbnb Cereal';
+  src: url('AirbnbCereal_W_Lt.otf') format('opentype');
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Airbnb Cereal';
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,10 +22,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Airbnb Cereal';
+  color: #ffffff;
+
 }
 
 .title a {
-  color: #f213a4;
   text-decoration: none;
 }
 
@@ -27,6 +41,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: 'Airbnb Cereal';
 }
 
 .title,
@@ -51,8 +66,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  
+  
 }
 
 .grid {
@@ -62,18 +77,15 @@
   flex-wrap: wrap;
   max-width: 1200px;
 }
-
 .card {
-  background-color: #1b2129;
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+  background-color: #242526;
+  border: none;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  color: #f8f8f8;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
 .card:hover,
@@ -85,13 +97,12 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  margin-bottom: 10px;
 }
 
 .card p {
-  margin: 0;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -111,9 +122,12 @@
 .footer {
   border-color: #222;
 }
+
 .code {
   background: #111;
+  color: #f8f8f8;
 }
+
 .logo img {
   filter: invert(1);
 }
