--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -26,7 +26,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   font-family: 'Airbnb Cereal';
   color: #ffffff;
 
