--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 .container {
   padding: 0 2rem;
-  height: calc(100vh - 100px); /* Subtract the height of the Navbar */
+  height: calc(100vh); /* Subtract the height of the Navbar */
   display: flex;
   flex-direction: column;
 }
