added links to cards

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,12 +12,15 @@ body {
 }
 
 p {
-  /* background-color: #081056;
-  border-radius: 10px;
-  color: rgb(255, 225, 225); */
   width: 350px;
   text-overflow: ellipsis;
   /* padding: 3px; */
+}
+
+a {
+  background-color: #081056;
+  border-radius: 10px;
+  color: rgb(255, 225, 225);
 }
 
 
